[Swethaa/Nimalan] Refactor. modify readme