@@ -1,46 +1,79 @@
 Random Forest Classifier in Hardware
 =======================
 
-This project contains utilities to build a random forest classifier in hardware intended for FPGAs. The training of the classifier is done using a python-based script. The tree structure is then extracted and used to create verilog designs using chisel3-based parameterized circuit generators. The generated design may then be tested using a verilator-based simulator or used for synthesis using external FPGA toolchains.
+This project contains Chisel code to generate a random forest classifier for chipyard based SoC designs.
+The training of the classification models are done using a python-based script.
+The tree structure is serialized and stored in a scratchpad for the accelerator to use. 
 
-## Requirements
+This repo is meant to be added as a subproject in [chipyard](). Steps to add this are mentioned in the [chipyard section](#chipyard)
 
-- `python`- version 3.3 or greater.
-- `sbt` - Refer [here](https://www.scala-sbt.org/download.html) for installation.
-- `cmake` - version 3.3 or greater. Refer [here](https://cmake.org/download/) for installation.
-- `verilator` - Refer [here](https://www.veripool.org/projects/verilator/wiki/Installing) for installation. On MacOS you can install it using `brew install verilator`.
+## Adding in Chipyard
 
-## Running the build pipeline
-The build pipeline, implemented in scala, can be triggered with default configurations using the following command:
+Refer to [chipyard setup]() for setting up chipyard.
+This project has been developed and tested in chipyard v1.8.1
 
-``` sh
-$ sbt "run --verbose config/default.json"
+1. `cd <CHIPYARD_ROOT>/generators`
+2. `git clone <repo-url>`  (Adding this repo as submodule)
+3. Within `build.sbt` of the chipyard root folder, add the project and add it as a dependency
+
+```scala
+// Add the sub project as one of the dependencies
+lazy val chipyard = (project in file("generators/chipyard"))
+     sha3, // On separate line to allow for cleaner tutorial-setup patches
+     dsptools, `rocket-dsp-utils`,
+     gemmini, icenet, tracegen, cva6, nvdla, sodor, ibex, fft_generator,
+-    constellation, mempress)
++    constellation, mempress, psrf)
+   .settings(libraryDependencies ++= rocketLibDeps.value)
+   .settings(commonSettings)
+
+// Add the repo as a sub project   
+lazy val psrf = (project in file("./generators/psrf-chisel"))
+  .dependsOn(rocketchip, testchipip, dsptools, `rocket-dsp-utils`)
+  .settings(libraryDependencies ++= rocketLibDeps.value)
+  .settings(libraryDependencies ++= Seq("edu.berkeley.cs" %% "chiseltest"    % "0.5.1" % "test"))
+  .settings(commonSettings)
 ```
 
-To understand how the build pipeline works and how it can be configured, please refer to the following documents:
-- [*Build system*](docs/build-system.md)
-- [*Configuration system*](docs/config-system.md)
+### Generating a SoC with a Random Forest Accelerator
 
-### Building and testing with different datasets
-The build pipeline expects csv file based datasets. The `dataset` parameter expects a path to the dataset file. The `input_headers` and `target_header` parameter may be used to indicate the fields that corrospond to input data attributes and target data classifications. Please refer to the [*configuration system documentation*](docs/config-system.md) for more information.
+Create a Config which has the RandomForestAccelerator included
 
-## Running Chisel unit-tests
-To test the hardware modules using Chisel IO testers:
-
-``` sh
-$ sbt test
+```scala
+class RandomForestConfig extends Config(
+  new psrf.accelerator.WithTLRandomForest(
+    csrAddress=AddressSet(0x1100, 0xff),
+    scratchpadAddress = AddressSet(0x200000, 0x1ffff)
+  ) ++
+    new freechips.rocketchip.subsystem.WithNBigCores(1) ++
+    new chipyard.config.AbstractConfig
+)
 ```
 
-## Known issues
+Add the peripheral within Digital Top
 
-### Java out-of-memory error for large designs
+```scala
+// DigitalTop.scala
 
-For large designs (high number of trees with many nodes), JVM may throw an out of memory error when compiling chisel to verilog. It may be necessary to increase the JVM heap size or change the garbage collector.
-
-``` sh
-$ export JAVA_OPTS="-XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -Xmx4G -XX:MaxPermSize=1G -Xss2M"
+class DigitalTop(implicit p: Parameters) extends ChipyardSystem
+  // other peripherals 
+  with psrf.accelerator.CanHaveTLRandomForestWithScratchpad
+ {
+   override lazy val module = new DigitalTopModule(this)
+ }
 ```
 
-### Verilator error for simulating large designs
+### Running a Verilator based simulation of the SoC
 
-Verilator may also encounter errors when compiling large verilog designs to C++ due to lack of memory. Please ensure that the system has adequate amount of free memory to avoid this.
+```
+cd sims/verilator
+make CONFIG=RandomForestConfig
+```
+
+### Running Chisel unit-tests
+
+To test the hardware modules using Chisel IO testers, within chipyard root folder
+
+``` sh
+$ sbt psrf/test
+```
